force-app/main/default/objects/Contract__c/fields/Govt_Funds__c.field-meta.xml
<CustomField>
    <fullName>Govt_Funds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Govt Funds</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contract already billed</errorMessage>
        <filterItems>
            <field>$Source.IsItBilled__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Govt_Funds__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>