force-app/main/default/objects/Contract__c/fields/IsItBilled__c.field-meta.xml
<CustomField>
    <fullName>IsItBilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Billed</label>
    <type>Checkbox</type>
</CustomField>