force-app/main/default/objects/Contract__c/fields/TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmount__c</fullName>
    <label>TotalPaidAmount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>