force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>TotalPaidAmount__c</columns>
    <columns>Fixed_Amount__c</columns>
    <columns>Due_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>